# kuzzle-rs

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: main.yml
examples/: now.rs
src/: kuzzle.rs  lib.rs
src/api/: mod.rs
src/api/objects/: request.rs  response.rs
src/protocols/: mod.rs  websocket.rs
src/types/: request.rs  response.rs
